<resources>
    <string name="app_name">CodeFobe-user-Information</string>
    <string name="user_avatar">User Avatar</string>
    <string name="id">ID:</string>
    <string name="uid">UID:</string>
    <string name="password">Password:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="username">Username:</string>
    <string name="email">Email:</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
</resources>